...

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_side_by_side"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_side_by_side" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_cut"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_mode_overlay_cut"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_slide"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_overlay_slide" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_tap"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_overlay_tap" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_transparent"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/compare_mode_transparent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_overlay_touch"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_mode_overlay_touch"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/select_compare_mode_dialog_btn_differences"
                        style="@style/buttonStyles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_mode_differences"
                        android:textSize="@dimen/text_size" />
                </TableRow>
...
