...

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/overlay_cut_btn_reset"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/reset"
                app:srcCompat="@drawable/ic_restart" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <SeekBar
                android:id="@+id/full_slider_seekbar_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progressTint="@android:color/transparent"
                android:thumbTint="@color/light_grey" />
        </FrameLayout>

...
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/full_slider_frame_layout_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/full_slider_seekbar_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:progressTint="@android:color/transparent"
            android:rotation="90"
            android:thumbTint="@color/light_grey" />
...
        app:layout_constraintBottom_toTopOf="@+id/full_slider_frame_layout_bottom"
        app:layout_constraintEnd_toStartOf="@+id/full_slider_frame_layout_right"
        app:layout_constraintStart_toEndOf="@+id/full_slider_frame_layout_left"
        app:layout_constraintTop_toBottomOf="@+id/full_slider_frame_layout_top">

        <com.vincentengelsoftware.androidimagecompare.ui.widget.ZoomImageView
            android:id="@+id/full_slide_image_view_base"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/background_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

...
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/full_slider_frame_layout_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <SeekBar
            android:id="@+id/full_slider_seekbar_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:progressTint="@android:color/transparent"
            android:rotation="90"
            android:thumbTint="@color/light_grey" />
...
        android:paddingHorizontal="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/full_slider_seekbar_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressTint="@android:color/transparent"
            android:thumbTint="@color/light_grey" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
