...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Background image (always fully visible) -->
        <com.vincentengelsoftware.androidimagecompare.ui.widget.ZoomImageView
            android:id="@+id/overlay_touch_image_view_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/background_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <!-- Front image with touch-to-reveal erasing -->
        <com.vincentengelsoftware.androidimagecompare.ui.widget.TouchRevealView
            android:id="@+id/overlay_touch_reveal_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

    </FrameLayout>

...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp">

            <ImageButton
                android:id="@+id/overlay_touch_button_reset"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/button"
                android:contentDescription="@string/reset"
                app:srcCompat="@drawable/ic_restart" />
        </FrameLayout>
...
        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <SeekBar
                android:id="@+id/overlay_touch_brush_size"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:max="200"
                android:progress="60" />
        </FrameLayout>

...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp">

            <ImageButton
                android:id="@+id/overlay_touch_button_erase_toggle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/button"
                android:contentDescription="@string/overlay_touch_erase_toggle"
                app:srcCompat="@drawable/pause_circle" />
        </FrameLayout>
...
