...
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.vincentengelsoftware.androidimagecompare.ui.widget.ZoomImageView
            android:id="@+id/overlay_slide_image_view_base"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/background_image"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

...
        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <SeekBar
                android:id="@+id/overlay_slide_seek_bar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/overlay_transparent_button_hide_front_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/hide_front_image"
                app:srcCompat="@drawable/ic_visibility"
                tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck"
                tools:srcCompat="@drawable/ic_visibility" />
...
